--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
             <div class="vacancies__container-inner-container">
                 <!-- белые линии -->
                 <img src="images/vacancies/vacanciesBg.png" alt="" class="vacancies__bgImg">
-    
+
                 <h2>приглашаем<br>на работу</h2>
                 <div class="vacancies__text-block">
                     <p>Хочешь работать с профессионалами и влиять на уровень своего дохода? Присоединяйся к нам и стань
@@ -430,7 +430,7 @@
                 </div>
             </div>
         </a>
-        
+
     </div>
 
     <!-- contacts -->
@@ -495,6 +495,10 @@
                     </div>
 
                     <div class="main-info__map">
+                        <div style="position:absolute;overflow:hidden;width: 100%;height: 100%; border-radius: 2rem; top: 0;left: 0;"><iframe
+                                src="https://yandex.ru/map-widget/v1/?ll=49.235452%2C55.796250&mode=poi&poi%5Bpoint%5D=49.233483%2C55.796666&poi%5Buri%5D=ymapsbm1%3A%2F%2Forg%3Foid%3D204756980064%26yclid%3D8198105421854539775&z=16.83"
+                                frameborder="1" allowfullscreen="true"
+                                style="width: 100%;height: 100%;border-radius: 2rem;"></iframe></div>
                         <div class="map-adress-block">
                             <p>Республика Татарстан, г. Казань, жилой массив Малые<br>Клыки, ул. Дорожная, д.33 (заезд с
                                 Мамадышского тракта)</p>
