item page + services page

--- a/catalog-subcategory.html
+++ b/catalog-subcategory.html
@@ -56,7 +56,7 @@
                 <div class="header__nav">
                     <a href="catalog.html" class="underline-one">Товары</a>
                     <a href="catalog.html" class="underline-one">Аренда</a>
-                    <a href="#" class="underline-one">Услуги</a>
+                    <a href="services.html" class="underline-one">Услуги</a>
                     <a href="index.html#company" class="underline-one">Компания</a>
                     <a href="index.html#contacts" class="underline-one">Контакты</a>
                     <a href="index.html#vacancies" class="underline-one">Вакансии</a>
@@ -98,7 +98,7 @@
 
             <!-- items grid -->
             <div class="items-grid">
-                <a href="">
+                <a href="item-page.html">
                     <div class="item-card">
                         <img src="images/items/opalubka.png" alt="">
 
@@ -114,7 +114,7 @@
                     </div>
                 </a>
 
-                <a href="">
+                <a href="item-page.html">
                     <div class="item-card">
                         <img src="images/items/badya.png" alt="">
 
@@ -130,7 +130,7 @@
                     </div>
                 </a>
 
-                <a href="">
+                <a href="item-page.html">
                     <div class="item-card">
                         <img src="images/items/kabel.png" alt="">
 
@@ -146,7 +146,7 @@
                     </div>
                 </a>
 
-                <a href="">
+                <a href="item-page.html">
                     <div class="item-card">
                         <img src="images/items/stanki.png" alt="">
 
@@ -162,7 +162,7 @@
                     </div>
                 </a>
 
-                <a href="">
+                <a href="item-page.html">
                     <div class="item-card">
                         <img src="images/items/stanki.png" alt="">
 
@@ -178,7 +178,7 @@
                     </div>
                 </a>
 
-                <a href="">
+                <a href="item-page.html">
                     <div class="item-card">
                         <img src="images/items/kabel.png" alt="">
 
@@ -194,7 +194,7 @@
                     </div>
                 </a>
 
-                <a href="">
+                <a href="item-page.html">
                     <div class="item-card">
                         <img src="images/items/badya.png" alt="">
 
@@ -210,7 +210,7 @@
                     </div>
                 </a>
 
-                <a href="">
+                <a href="item-page.html">
                     <div class="item-card">
                         <img src="images/items/opalubka.png" alt="">
 
