--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <div class="header__nav">
                     <a href="catalog.html" class="underline-one">Товары</a>
                     <a href="catalog.html" class="underline-one">Аренда</a>
-                    <a href="#" class="underline-one">Услуги</a>
+                    <a href="services.html" class="underline-one">Услуги</a>
                     <a href="index.html#company" class="underline-one">Компания</a>
                     <a href="index.html#contacts" class="underline-one">Контакты</a>
                     <a href="index.html#vacancies" class="underline-one">Вакансии</a>
@@ -151,7 +151,7 @@
                         фасадные, вышки-туры, станки для резки и гибки арматуры, виброоборудование, трансформаторы для
                         прогрева бетона, расходные материалы и многое другое в наличии со склада в Казани и под заказ
                     </p>
-                    <img src="images/mainPageCatalog/tovary.png" alt="">
+                    <img src="images/mainPageCatalog/tovary.png" alt="" id="tovary">
                 </a>
 
                 <a href="catalog.html" class="catalog-grid__card">
@@ -160,13 +160,13 @@
                         опалубки, фанера, леса фасадные, вышки-туры, станки для резки и гибки арматуры, трансформаторы
                         для
                         прогрева бетона, бадьи для бетона и многое другое в наличии со склада в Казани</p>
-                    <img src="images/mainPageCatalog/arenda.png" alt="">
+                    <img src="images/mainPageCatalog/arenda.png" alt="" id="arenda">
                 </a>
 
                 <a href="catalog.html" class="catalog-grid__card">
                     <h3>РЕМОНТ ОБОРУДОВАНИЯ</h3>
                     <p>осуществляем качественный и быстрый ремонт станков, трансформаторов, электроинструмента</p>
-                    <img src="images/mainPageCatalog/remont-oborudovaniya.png" alt="">
+                    <img src="images/mainPageCatalog/remont-oborudovaniya.png" alt="" id="remont-oborudovaniya">
                 </a>
 
                 <a href="catalog.html" class="catalog-grid__card">
@@ -174,7 +174,7 @@
                     <p>производим чистку и ремонт стальной щитовой опалубки, восстанавливаем функциональность и
                         фирменный
                         внешний вид</p>
-                    <img src="images/mainPageCatalog/remont-opalubki.png" alt="">
+                    <img src="images/mainPageCatalog/remont-opalubki.png" alt="" id="remont-opalubki">
                 </a>
 
                 <a href="catalog.html" class="catalog-grid__card">
@@ -182,7 +182,7 @@
                     <p>услуга, позволяющая оптимизировать расходы на приобретение строительного оборудования и
                         материалов,
                         делая Ваши затраты минимальными</p>
-                    <img src="images/mainPageCatalog/obratny-vykup.png" alt="">
+                    <img src="images/mainPageCatalog/obratny-vykup.png" alt="" id="obratny-vykup">
                 </a>
 
                 <a href="catalog.html" class="catalog-grid__card">
@@ -190,7 +190,7 @@
                     <p>до строительного объекта заказчика грузовым бортовым транспортом с краново-манипуляторной
                         установкой
                         по Казани и Татарстану</p>
-                    <img src="images/mainPageCatalog/dostavka.png" alt="">
+                    <img src="images/mainPageCatalog/dostavka.png" alt="" id="dostavka">
                 </a>
             </div>
         </div>
