--- a/services.html
+++ b/services.html
@@ -80,76 +80,51 @@
     </header>
 
     <main>
-        <div class="catalog-page__container page container">
+        <div class="page container">
             <!-- page title -->
             <div class="page-title">
                 <nav aria-label="Хлебные крошки" class="breadcrumbs">
                     <ol>
                         <li><a href="/">главная</a></li>
                         <span class="breadcrumbs__divider">•</span>
-                        <li><a href="catalog.html">каталог</a></li>
-                        <span class="breadcrumbs__divider">•</span>
-                        <li><a href="#">аренда</a></li>
+                        <li><a href="services.html">услуги</a></li>
                     </ol>
                 </nav>
 
-                <h2 class="primary">Каталог продукции</h2>
+                <h2 class="primary">Услуги компании</h2>
             </div>
 
             <!-- catalog grid -->
             <div class="catalog-grid">
-                <a href="catalog-subcategory.html" class="catalog-grid__card">
-                    <h3>Фанера</h3>
-                    <p>Хвойная фанера, комбинированная фанера, авиационная, корабельная, мебельная, опалубочная и строительная, транспортная
-                    </p>
-                    <img src="images/mainPageCatalog/tovary.png" alt="">
+                <a href="catalog.html" class="catalog-grid__card">
+                    <h3>РЕМОНТ ОБОРУДОВАНИЯ</h3>
+                    <p>осуществляем качественный и быстрый ремонт станков, трансформаторов, электроинструмента</p>
+                    <img src="images/mainPageCatalog/remont-oborudovaniya.png" alt="" id="remont-oborudovaniya">
                 </a>
 
-                <a href="catalog-subcategory.html" class="catalog-grid__card">
-                    <h3>опалубка</h3>
-                    <p>Мелкощитовая, крупнощитовая, блочная, объемно-переставная, скользящая, горизонтально-перемещаемая, пневматическая, несъёмная.</p>
-                    <img src="images/mainPageCatalog/arenda.png" alt="">
+                <a href="catalog.html" class="catalog-grid__card">
+                    <h3>РЕМОНТ ОПАЛУБКИ</h3>
+                    <p>производим чистку и ремонт стальной щитовой опалубки, восстанавливаем функциональность и
+                        фирменный
+                        внешний вид</p>
+                    <img src="images/mainPageCatalog/remont-opalubki.png" alt="" id="remont-opalubki">
                 </a>
 
-                <a href="catalog-subcategory.html" class="catalog-grid__card">
-                    <h3>Фанера</h3>
-                    <p>Хвойная фанера, комбинированная фанера, авиационная, корабельная, мебельная, опалубочная и строительная, транспортная
-                    </p>
-                    <img src="images/mainPageCatalog/dostavka.png" alt="">
+                <a href="catalog.html" class="catalog-grid__card">
+                    <h3>ОБРАТНЫЙ ВЫКУП</h3>
+                    <p>услуга, позволяющая оптимизировать расходы на приобретение строительного оборудования и
+                        материалов,
+                        делая Ваши затраты минимальными</p>
+                    <img src="images/mainPageCatalog/obratny-vykup.png" alt="" id="obratny-vykup">
                 </a>
 
-                <a href="catalog-subcategory.html" class="catalog-grid__card">
-                    <h3>опалубка</h3>
-                    <p>Мелкощитовая, крупнощитовая, блочная, объемно-переставная, скользящая, горизонтально-перемещаемая, пневматическая, несъёмная.</p>
-                    <img src="images/mainPageCatalog/obratny-vykup.png" alt="">
+                <a href="catalog.html" class="catalog-grid__card">
+                    <h3>ДОСТАВКА</h3>
+                    <p>до строительного объекта заказчика грузовым бортовым транспортом с краново-манипуляторной
+                        установкой
+                        по Казани и Татарстану</p>
+                    <img src="images/mainPageCatalog/dostavka.png" alt="" id="dostavka">
                 </a>
-
-                <a href="catalog-subcategory.html" class="catalog-grid__card">
-                    <h3>Фанера</h3>
-                    <p>Хвойная фанера, комбинированная фанера, авиационная, корабельная, мебельная, опалубочная и строительная, транспортная
-                    </p>
-                    <img src="images/mainPageCatalog/tovary.png" alt="">
-                </a>
-
-                <a href="catalog-subcategory.html" class="catalog-grid__card">
-                    <h3>опалубка</h3>
-                    <p>Мелкощитовая, крупнощитовая, блочная, объемно-переставная, скользящая, горизонтально-перемещаемая, пневматическая, несъёмная.</p>
-                    <img src="images/mainPageCatalog/arenda.png" alt="">
-                </a>
-            </div>
-
-            <!-- catalog banner -->
-            <div class="catalog-page__banner container">
-                <div class="catalog-banner__content">
-                    <h4 class="primary">Поможем<br>с выбором</h4>
-
-                    <div class="catalog-banner__feedback-block">
-                        <h5>Оставьте заявку и мы подберем наиболее эффективное решение</h5>
-                        <button class="btn btn-primary">оставить заявку</button>
-                    </div>
-
-                    <img src="images/catalogPage/catalog-bannerBg.png" alt="">
-                </div>
             </div>
         </div>
     </main>
