--- a/item-page.html
+++ b/item-page.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="fonts/OpenSans/font-face.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
-    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="js/item-page.js" defer></script>
 </head>
 
