--- a/index.html
+++ b/index.html
@@ -58,8 +58,34 @@
                 <a href="index.html"><img src="images/logo/logo.png" alt="logo" class="header__logo"></a>
 
                 <div class="header__nav">
-                    <a href="catalog.html" class="underline-one">Товары</a>
-                    <a href="catalog.html" class="underline-one">Аренда</a>
+                    <div class="nav-item dropdown">
+                        <a href="catalog.html" class="underline-one">Товары</a>
+                        <div class="dropdown-menu__container">
+                            <div class="dropdown-menu">
+                                <a href="catalog.html" class="gray2">Опалубка</a>
+                                <a href="catalog.html" class="gray2">Трубы пвх</a>
+                                <a href="catalog.html" class="gray2">Закладные пластиковые</a>
+                                <a href="catalog.html" class="gray2">Греющий кабель</a>
+                                <a href="catalog.html" class="gray2">Бадьи для бетона</a>
+                                <a href="catalog.html" class="gray2">Трансформатор для прогрева бетона</a>
+                                <a href="catalog.html" class="gray2">Станки для резки арматуры</a>
+                                <a href="catalog.html" class="gray2">Станки для гибки арматуры</a>
+                                <a href="catalog.html" class="gray2">Стойки телескопические</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="nav-item dropdown">
+                        <a href="catalog.html" class="underline-one">Аренда</a>
+                        <div class="dropdown-menu__container">
+                            <div class="dropdown-menu">
+                                <a href="catalog.html" class="gray2">Обратный выкуп</a>
+                                <a href="catalog.html" class="gray2">Доставка</a>
+                                <a href="catalog.html" class="gray2">Аренда</a>
+                                <a href="catalog.html" class="gray2">Ремонт оборудования</a>
+                                <a href="catalog.html" class="gray2">Ремонт опалубки</a>
+                            </div>
+                        </div>
+                    </div>
                     <a href="services.html" class="underline-one">Услуги</a>
                     <a href="index.html#company" class="underline-one">Компания</a>
                     <a href="index.html#contacts" class="underline-one">Контакты</a>
@@ -518,7 +544,8 @@
                                 <iframe
                                     src="https://yandex.ru/map-widget/v1/?ll=49.235452%2C55.796250&mode=poi&poi%5Bpoint%5D=49.233483%2C55.796666&poi%5Buri%5D=ymapsbm1%3A%2F%2Forg%3Foid%3D204756980064%26yclid%3D8198105421854539775&z=16.83"
                                     frameborder="1" allowfullscreen="true"
-                                    style="width: 100%;height: 100%;border-radius: 2rem;"></iframe></div>
+                                    style="width: 100%;height: 100%;border-radius: 2rem;"></iframe>
+                            </div>
                             <div class="map-adress-block">
                                 <p>Республика Татарстан, г. Казань, жилой массив Малые<br>Клыки, ул. Дорожная, д.33
                                     (заезд с
@@ -597,8 +624,8 @@
                                             d="M12 22C17.5228 22 22 17.5228 22 12C22 6.47715 17.5228 2 12 2C6.47715 2 2 6.47715 2 12C2 17.5228 6.47715 22 12 22Z"
                                             stroke="#2190EC" stroke-width="1.5" stroke-miterlimit="10"
                                             stroke-linecap="round" stroke-linejoin="round" />
-                                        <path d="M8.47 10.74L12 14.26L15.53 10.74" stroke="#2190EC"
-                                            stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                                        <path d="M8.47 10.74L12 14.26L15.53 10.74" stroke="#2190EC" stroke-width="1.5"
+                                            stroke-linecap="round" stroke-linejoin="round" />
                                     </svg>
                                 </button>
                             </div>
@@ -627,8 +654,8 @@
                                             d="M12 22C17.5228 22 22 17.5228 22 12C22 6.47715 17.5228 2 12 2C6.47715 2 2 6.47715 2 12C2 17.5228 6.47715 22 12 22Z"
                                             stroke="#2190EC" stroke-width="1.5" stroke-miterlimit="10"
                                             stroke-linecap="round" stroke-linejoin="round" />
-                                        <path d="M8.47 10.74L12 14.26L15.53 10.74" stroke="#2190EC"
-                                            stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                                        <path d="M8.47 10.74L12 14.26L15.53 10.74" stroke="#2190EC" stroke-width="1.5"
+                                            stroke-linecap="round" stroke-linejoin="round" />
                                     </svg>
                                 </button>
                             </div>
@@ -652,8 +679,8 @@
                                             d="M12 22C17.5228 22 22 17.5228 22 12C22 6.47715 17.5228 2 12 2C6.47715 2 2 6.47715 2 12C2 17.5228 6.47715 22 12 22Z"
                                             stroke="#2190EC" stroke-width="1.5" stroke-miterlimit="10"
                                             stroke-linecap="round" stroke-linejoin="round" />
-                                        <path d="M8.47 10.74L12 14.26L15.53 10.74" stroke="#2190EC"
-                                            stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                                        <path d="M8.47 10.74L12 14.26L15.53 10.74" stroke="#2190EC" stroke-width="1.5"
+                                            stroke-linecap="round" stroke-linejoin="round" />
                                     </svg>
                                 </button>
                             </div>
