--- a/item-page.html
+++ b/item-page.html
@@ -57,8 +57,34 @@
                 <a href="index.html"><img src="images/logo/logo.png" alt="logo" class="header__logo"></a>
 
                 <div class="header__nav">
-                    <a href="catalog.html" class="underline-one">Товары</a>
-                    <a href="catalog.html" class="underline-one">Аренда</a>
+                    <div class="nav-item dropdown">
+                        <a href="catalog.html" class="underline-one">Товары</a>
+                        <div class="dropdown-menu__container">
+                            <div class="dropdown-menu">
+                                <a href="#" class="gray2">Опалубка</a>
+                                <a href="#" class="gray2">Трубы пвх</a>
+                                <a href="#" class="gray2">Закладные пластиковые</a>
+                                <a href="#" class="gray2">Греющий кабель</a>
+                                <a href="#" class="gray2">Бадьи для бетона</a>
+                                <a href="#" class="gray2">Трансформатор для прогрева бетона</a>
+                                <a href="#" class="gray2">Станки для резки арматуры</a>
+                                <a href="#" class="gray2">Станки для гибки арматуры</a>
+                                <a href="#" class="gray2">Стойки телескопические</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="nav-item dropdown">
+                        <a href="catalog.html" class="underline-one">Аренда</a>
+                        <div class="dropdown-menu__container">
+                            <div class="dropdown-menu">
+                                <a href="#" class="gray2">Обратный выкуп</a>
+                                <a href="#" class="gray2">Доставка</a>
+                                <a href="#" class="gray2">Аренда</a>
+                                <a href="#" class="gray2">Ремонт оборудования</a>
+                                <a href="#" class="gray2">Ремонт опалубки</a>
+                            </div>
+                        </div>
+                    </div>
                     <a href="services.html" class="underline-one">Услуги</a>
                     <a href="index.html#company" class="underline-one">Компания</a>
                     <a href="index.html#contacts" class="underline-one">Контакты</a>
