--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/inputmask@5.0.6/dist/inputmask.min.js"></script>
     <script src="js/swiper.js" defer></script>
     <script src="js/index.js" defer></script>
 </head>
 
 <body>
-    
+
     <!-- фоновое изображение -->
     <div class="svg-bg-wrapper">
         <svg class="bg-svg" width="5248" height="9195" viewBox="0 0 5248 9195" fill="none"
@@ -54,6 +55,62 @@
 
     <div class="overlay" id="overlay"></div>
 
+    <!-- modal -->
+    <div class="modal-overlay" id="modal-overlay">
+        <div class="modal-container">
+
+            <button class="close-modal-btn" id="close-modal-btn"><svg width="60" height="60" viewBox="0 0 60 60" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path
+                        d="M30 55C43.75 55 55 43.75 55 30C55 16.25 43.75 5 30 5C16.25 5 5 16.25 5 30C5 43.75 16.25 55 30 55Z"
+                        stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                    <path d="M22.925 37.0748L37.075 22.9248" stroke="white" stroke-width="1.5" stroke-linecap="round"
+                        stroke-linejoin="round" />
+                    <path d="M37.075 37.0748L22.925 22.9248" stroke="white" stroke-width="1.5" stroke-linecap="round"
+                        stroke-linejoin="round" />
+                </svg></button>
+
+            <div class="modal-title">
+                <h3>Задайте вопрос</h3>
+                <h5>Оставьте заявку и мы подберем наиболее эффективное решение для вас</h5>
+            </div>
+
+            <form action="" class="modal-form">
+                <div class="modal__input-container">
+                    <span class="primary">Имя</span>
+                    <input type="text" name="name" placeholder="Введите ваше имя" required>
+                </div>
+
+                <div class="modal__input-container">
+                    <span class="primary">Номер телефона</span>
+                    <input type="tel" id="phone-input" placeholder="+7 (000) 000-00-00" required>
+                </div>
+
+                <div class="modal__input-container">
+                    <span class="primary">Электронная почта</span>
+                    <input type="email" name="email" placeholder="mail@mail.ru" required>
+                </div>
+
+                <div class="modal__input-container">
+                    <span class="primary">Ваш вопрос</span>
+                    <textarea rows="3" name="question" id="question" placeholder="Меня интересует.. "
+                        style="resize: none;" required></textarea>
+                </div>
+
+                <div class="form__submition-container">
+                    <button type="submit">Оставить заявку</button>
+                    <span>Нажав кнопку “Оставить заявку”- вы принимаете <a href="#">условия обработки персональных
+                            данных</a></span>
+                </div>
+            </form>
+
+            <svg class="modal-bg" width="104" height="178" viewBox="0 0 104 178" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <rect y="46.6621" width="30.511" height="131.338" fill="white" fill-opacity="0.2" />
+                <rect x="73.4886" y="30.3975" width="30.511" height="147.603" fill="white" fill-opacity="0.2" />
+                <rect x="36.7444" width="30.511" height="178" fill="white" fill-opacity="0.2" />
+              </svg>
+        </div>
+    </div>
+
     <!-- хедер -->
     <header>
         <div class="header-content">
@@ -78,8 +135,25 @@
                         </div>
                     </div>
 
-                    <div class="nav-item dropdown" id="services-dropdown">
+                    <div class="nav-item dropdown" id="rent-dropdown">
                         <a href="catalog.html" class="dropdown-link">Аренда</a>
+                        <div class="dropdown-menu__container">
+                            <div class="dropdown-menu">
+                                <a href="catalog.html" class="gray2">Опалубка</a>
+                                <a href="catalog.html" class="gray2">Трубы пвх</a>
+                                <a href="catalog.html" class="gray2">Закладные пластиковые</a>
+                                <a href="catalog.html" class="gray2">Греющий кабель</a>
+                                <a href="catalog.html" class="gray2">Бадьи для бетона</a>
+                                <a href="catalog.html" class="gray2">Трансформатор для прогрева бетона</a>
+                                <a href="catalog.html" class="gray2">Станки для резки арматуры</a>
+                                <a href="catalog.html" class="gray2">Станки для гибки арматуры</a>
+                                <a href="catalog.html" class="gray2">Стойки телескопические</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="nav-item dropdown" id="services-dropdown">
+                        <a href="services.html" class="dropdown-link">Услуги</a>
                         <div class="dropdown-menu__container">
                             <div class="dropdown-menu">
                                 <a href="catalog.html" class="gray2">Обратный выкуп</a>
@@ -90,7 +164,6 @@
                             </div>
                         </div>
                     </div>
-                    <a href="services.html" class="underline-one">Услуги</a>
                     <a href="index.html#company" class="underline-one">Компания</a>
                     <a href="index.html#contacts" class="underline-one">Контакты</a>
                     <a href="index.html#vacancies" class="underline-one">Вакансии</a>
@@ -100,15 +173,167 @@
             <div class="header__contacts">
                 <a href="tel:+79585380098">+7 (958) 538-00-98</a>
 
-                <button class="btn btn-primary">ОСТАВИТЬ ЗАЯВКУ</button>
+                <button class="btn btn-primary" id="openModal">ОСТАВИТЬ ЗАЯВКУ</button>
 
-                <button class="burger-btn">
+                <button class="burger-btn" id="openBurger">
                     <svg width="43" height="13" viewBox="0 0 43 13" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <rect width="42.7143" height="1.85714" fill="white" />
                         <rect x="11.1429" y="5.57143" width="31.5714" height="1.85714" fill="white" />
                         <rect y="11.1429" width="42.7143" height="1.85714" fill="white" />
                     </svg>
                 </button>
+            </div>
+        </div>
+
+        <div class="burger-menu__container">
+            <div class="header-content">
+                <div class="header__main">
+                    <a href="index.html"><img src="images/logo/logo.png" alt="logo" class="header__logo"></a>
+                </div>
+
+                <div class="header__contacts">
+                    <a href="tel:+79585380098">+7 (958) 538-00-98</a>
+
+                    <button class="burger-btn" id="closeBurger">
+                        <svg width="33" height="33" viewBox="0 0 33 33" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <rect x="0.999939" y="31" width="42.7143" height="1.85714"
+                                transform="rotate(-45 0.999939 31)" fill="white" />
+                            <rect x="1.99994" y="1" width="42.7143" height="1.85714" transform="rotate(45 1.99994 1)"
+                                fill="white" />
+                        </svg>
+                    </button>
+                </div>
+            </div>
+
+            <div class="footer__main">
+                <div class="footer__nav">
+                    <div class="footer-nav__column">
+                        <div class="footer-nav__title">
+                            <h3>Каталог</h3>
+                            <button class="footer-accordionIcon" id="openFooterNavBtn">
+                                <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path
+                                        d="M12 22C17.5228 22 22 17.5228 22 12C22 6.47715 17.5228 2 12 2C6.47715 2 2 6.47715 2 12C2 17.5228 6.47715 22 12 22Z"
+                                        stroke="#2190EC" stroke-width="1.5" stroke-miterlimit="10"
+                                        stroke-linecap="round" stroke-linejoin="round" />
+                                    <path d="M8.47 10.74L12 14.26L15.53 10.74" stroke="#2190EC" stroke-width="1.5"
+                                        stroke-linecap="round" stroke-linejoin="round" />
+                                </svg>
+                            </button>
+                        </div>
+
+                        <div class="footer-nav__list">
+                            <a href="#" class="gray2 underline-one">Опалубка</a>
+                            <a href="#" class="gray2 underline-one">Трубы пвх</a>
+                            <a href="#" class="gray2 underline-one">Закладные пластиковые</a>
+                            <a href="#" class="gray2 underline-one">Греющий кабель</a>
+                            <a href="#" class="gray2 underline-one">Бадьи для бетона</a>
+                            <a href="#" class="gray2 underline-one">Трансформатор для прогрева бетона</a>
+                            <a href="#" class="gray2 underline-one">Станки для резки арматуры</a>
+                            <a href="#" class="gray2 underline-one">Станки для гибки арматуры</a>
+                            <a href="#" class="gray2 underline-one">Стойки телескопические</a>
+                            <a href="#" class="primary underline-one">Все категории</a>
+                        </div>
+                    </div>
+
+                    <div class="footer-nav__column">
+                        <div class="footer-nav__title">
+                            <h3>Услуги</h3>
+                            <button class="footer-accordionIcon" id="openFooterNavBtn">
+                                <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path
+                                        d="M12 22C17.5228 22 22 17.5228 22 12C22 6.47715 17.5228 2 12 2C6.47715 2 2 6.47715 2 12C2 17.5228 6.47715 22 12 22Z"
+                                        stroke="#2190EC" stroke-width="1.5" stroke-miterlimit="10"
+                                        stroke-linecap="round" stroke-linejoin="round" />
+                                    <path d="M8.47 10.74L12 14.26L15.53 10.74" stroke="#2190EC" stroke-width="1.5"
+                                        stroke-linecap="round" stroke-linejoin="round" />
+                                </svg>
+                            </button>
+                        </div>
+                        <div class="footer-nav__list">
+                            <a href="#" class="gray2 underline-one">Обратный выкуп</a>
+                            <a href="#" class="gray2 underline-one">Доставка</a>
+                            <a href="#" class="gray2 underline-one">Аренда</a>
+                            <a href="#" class="gray2 underline-one">Ремонт оборудования</a>
+                            <a href="#" class="gray2 underline-one">Ремонт опалубки</a>
+                        </div>
+
+                    </div>
+
+                    <div class="footer-nav__column">
+                        <div class="footer-nav__title">
+                            <h3>Компания</h3>
+                            <button class="footer-accordionIcon" id="openFooterNavBtn">
+                                <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path
+                                        d="M12 22C17.5228 22 22 17.5228 22 12C22 6.47715 17.5228 2 12 2C6.47715 2 2 6.47715 2 12C2 17.5228 6.47715 22 12 22Z"
+                                        stroke="#2190EC" stroke-width="1.5" stroke-miterlimit="10"
+                                        stroke-linecap="round" stroke-linejoin="round" />
+                                    <path d="M8.47 10.74L12 14.26L15.53 10.74" stroke="#2190EC" stroke-width="1.5"
+                                        stroke-linecap="round" stroke-linejoin="round" />
+                                </svg>
+                            </button>
+                        </div>
+                        <div class="footer-nav__list">
+                            <a href="#" class="gray2 underline-one">Реквизиты</a>
+                            <a href="#" class="gray2 underline-one">О компании</a>
+                            <a href="#" class="gray2 underline-one">Контакты</a>
+                            <a href="#" class="gray2 underline-one">Вакансии в компании</a>
+                        </div>
+
+                    </div>
+                </div>
+
+                <div class="footer__top mobile">
+                    <button class="btn btn-primary" id="openModalBurger">ОСТАВИТЬ ЗАЯВКУ</button>
+                    <div class="contacts-list__item">
+                        <a href="tel:+79585380098" class="primary">+7 (958) 538-00-98</a>
+                        <span class="gray2">Отдел продаж</span>
+                    </div>
+
+                    <div class="contacts-list__item">
+                        <a href="tel:+79934133050" class="primary">+7 (993) 413-30-50</a>
+                        <span class="gray2">Бухгалтерия</span>
+                    </div>
+
+                    <div class="contacts-list__item">
+                        <a href="mailto:info@promrentsnab.ru" class="primary">info@promrentsnab.ru</a>
+                        <span class="gray2">Электронная почта</span>
+                    </div>
+                </div>
+
+                <div class="contacts-actions footer-actions">
+                    <a href="#" class="btn btn-outline">
+                        telegram
+                        <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path
+                                d="M10 0C15.5228 0 20 4.47715 20 10C20 15.5228 15.5228 20 10 20C4.47715 20 0 15.5228 0 10C0 4.47715 4.47715 0 10 0ZM14.0889 6.02051C13.7127 6.02713 13.1355 6.22772 10.3584 7.38281C9.38574 7.78737 7.44155 8.62443 4.52637 9.89453C4.05307 10.0828 3.8048 10.2672 3.78223 10.4473C3.7393 10.7927 4.23727 10.9 4.86328 11.1035C5.37386 11.2695 6.06092 11.464 6.41797 11.4717C6.74172 11.4786 7.10306 11.3452 7.50195 11.0713C10.2213 9.23563 11.6274 8.30613 11.7197 8.2832C11.7818 8.26911 11.8683 8.2513 11.9268 8.30273C11.9852 8.3547 11.9798 8.45406 11.9736 8.48047C11.9205 8.69431 9.3705 11.0139 9.21875 11.1709C8.65611 11.7553 8.01582 12.1131 9.00293 12.7637C9.85715 13.3266 10.3544 13.6859 11.2344 14.2627C11.7967 14.6313 12.2378 15.0688 12.8184 15.0156C13.0856 14.991 13.3618 14.7396 13.502 13.9902C13.8332 12.2192 14.4843 8.38201 14.6348 6.80078C14.6479 6.66227 14.6315 6.48508 14.6182 6.40723C14.6048 6.3294 14.5768 6.21881 14.4756 6.13672C14.3559 6.03969 14.1717 6.01911 14.0889 6.02051Z"
+                                fill="#2190EC" />
+                        </svg>
+                    </a>
+
+                    <a href="#" class="btn btn-outline">
+                        whatsapp
+                        <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <g clip-path="url(#clip0_2033_642)">
+                                <path
+                                    d="M9.51035 0.0103446C4.18534 0.261935 -0.0166002 4.66094 -0.000687375 9.94769C0.0018219 11.5033 0.374726 13.0362 1.08765 14.4218L0.0267984 19.5335C0.0134927 19.597 0.0165306 19.6628 0.0356314 19.7248C0.0547322 19.7868 0.0892802 19.8431 0.136085 19.8883C0.18289 19.9336 0.240443 19.9665 0.30343 19.9839C0.366416 20.0013 0.432805 20.0026 0.496467 19.9879L5.54661 18.8012C6.88265 19.4611 8.35117 19.8147 9.84355 19.8358C15.2862 19.9185 19.8252 15.6314 19.994 10.2352C20.1758 4.45049 15.3629 -0.266118 9.51035 0.0103446ZM15.5379 15.4119C14.3776 16.5621 12.8825 17.3219 11.2636 17.5844C9.64465 17.8468 7.98351 17.5985 6.5144 16.8746L5.81086 16.5273L2.71462 17.2548L3.36608 14.1166L3.01985 13.4436C2.27057 11.9818 2.00662 10.3223 2.26576 8.7026C2.5249 7.08292 3.29386 5.58603 4.46261 4.42609C5.93104 2.96954 7.92264 2.15125 9.9993 2.15125C12.076 2.15125 14.0676 2.96954 15.536 4.42609C17.0044 5.88265 17.8294 7.85816 17.8294 9.91803C17.8294 11.9779 17.0044 13.9534 15.536 15.41L15.5379 15.4119Z"
+                                    fill="#2190EC" />
+                                <path
+                                    d="M14.8529 12.0702L12.9158 11.5187C12.7909 11.4833 12.6586 11.4819 12.5329 11.5147C12.4073 11.5475 12.2928 11.6133 12.2017 11.7052L11.7277 12.1835C11.6302 12.2825 11.5053 12.3506 11.3689 12.3792C11.2324 12.4078 11.0905 12.3956 10.961 12.3442C10.0448 11.9764 8.11594 10.2765 7.62457 9.42654C7.55586 9.30605 7.52465 9.16808 7.53486 9.03002C7.54507 8.89196 7.59625 8.75998 7.68195 8.65073L8.09569 8.12028C8.17503 8.01812 8.22514 7.89664 8.24075 7.76861C8.25637 7.64059 8.2369 7.51076 8.18441 7.39278L7.36948 5.5642C7.32378 5.46232 7.25476 5.37242 7.16791 5.30161C7.08107 5.23081 6.97877 5.18106 6.86916 5.15632C6.75954 5.13157 6.64562 5.13251 6.53644 5.15906C6.42725 5.18561 6.32581 5.23704 6.24016 5.30926C5.6996 5.7627 5.05827 6.45194 4.98015 7.21532C4.84272 8.56128 5.42474 10.2583 7.62602 12.2959C10.1687 14.6502 12.2046 14.9611 13.5306 14.6425C14.2824 14.4617 14.8808 13.7375 15.2627 13.1444C15.323 13.0504 15.3604 12.9436 15.3719 12.8327C15.3833 12.7218 15.3686 12.6098 15.3288 12.5056C15.289 12.4013 15.2253 12.3077 15.1427 12.2321C15.0601 12.1565 14.9608 12.1011 14.8529 12.0702Z"
+                                    fill="#2190EC" />
+                            </g>
+                            <defs>
+                                <clipPath id="clip0_2033_642">
+                                    <rect width="20" height="20" fill="white" />
+                                </clipPath>
+                            </defs>
+                        </svg>
+                    </a>
+                </div>
             </div>
         </div>
     </header>
