--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>ПРС</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="images/logo/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="fonts/OpenSans/font-face.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
@@ -82,7 +83,7 @@
 
                 <div class="modal__input-container">
                     <span class="primary">Номер телефона</span>
-                    <input type="tel" id="phone-input" placeholder="+7 (000) 000-00-00" required>
+                    <input type="tel" id="phone-input" placeholder="+7 (000) 000-00-00" title="+7 (000) 000-00-00" inputmode="numeric" pattern="\+7\s\(\d{3}\)\s\d{3}-\d{2}-\d{2}" required>
                 </div>
 
                 <div class="modal__input-container">
