--- a/item-page.html
+++ b/item-page.html
@@ -145,23 +145,29 @@
                                             <div class="swiper-slide">
                                                 <img src="images/items/item-add3.png" alt="Превью 4">
                                             </div>
+                                            <div class="swiper-slide">
+                                                <img src="images/items/item-add2.png" alt="Превью 3">
+                                            </div>
                                         </div>
                                     </div>
 
                                     <!-- Главное изображение -->
                                     <div class="swiper image-grid__main">
                                         <div class="swiper-wrapper">
-                                            <div class="swiper-slide">
+                                            <div class="swiper-slide mainImg">
                                                 <img src="images/items/item-main.png" alt="Главное 1">
                                             </div>
-                                            <div class="swiper-slide">
+                                            <div class="swiper-slide mainImg">
                                                 <img src="images/items/item-add1.png" alt="Главное 2">
                                             </div>
-                                            <div class="swiper-slide">
+                                            <div class="swiper-slide mainImg">
                                                 <img src="images/items/item-add2.png" alt="Главное 3">
                                             </div>
-                                            <div class="swiper-slide">
+                                            <div class="swiper-slide mainImg">
                                                 <img src="images/items/item-add3.png" alt="Главное 4">
+                                            </div>
+                                            <div class="swiper-slide mainImg">
+                                                <img src="images/items/item-add2.png" alt="Превью 3">
                                             </div>
                                         </div>
                                     </div>
